Bug 1834567 - Downgrade an assertion in ResolveXULTreePseudoStyle. r=jwatt

If this happens the caller could potentially get an slightly outdated
style, but I couldn't repro this locally and realistically it's not a
big deal in this caller, and it's not observable to the web, so...

Differential Revision: https://phabricator.services.mozilla.com/D179914